text align issue in city feature fix

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -129,6 +129,8 @@
     .city-feature {
         margin-bottom: 0px;
         margin-left: 0px;
+        text-align: justify;
+        margin-left: 30%;
     }
 
 }
